<?xml version="1.0"?>
<package format="3">
  <name>ros2_launch_demo</name>
  <version>0.0.0</version>
  <description>ROS2 Launch File Assignment</description>

  <maintainer email="student@university.edu">Student</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
